<resources>
    <string name="app_name">RollTheDice</string>
    <string name="login">INGRESO</string>
    <string name="register">REGISTRAR</string>
    <string name="logro">logro</string>
    <string name="image1">image1</string>
    <string name="image4">image4</string>
    <string name="image7">image7</string>
    <string name="image2">image2</string>
    <string name="image8">image8</string>
    <string name="image5">image5</string>
    <string name="image3">image3</string>
    <string name="image6">image6</string>
    <string name="image9">image9</string>
    <string name="confirmar">Confirmar</string>
    <string name="new_name">New Name</string>
    <string name="dado">dado</string>
    <string name="opciones">opciones</string>
    <string name="desliza_para_lanzar">Desliza para lanzar !!</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">DON\'T HAVE AN ACCOUNT? SIGN UP</string>
    <string name="p_l_a_y">P L A Y</string>
    <string name="r_a_n_k_i_n_g">R A N K I N G</string>
    <string name="s_t_a_t_s">S T A T S</string>
    <string name="classic_mode">Classic Mode</string>
    <string name="perfil">perfil</string>
    <string name="sonido">Sonido</string>
    <string name="musica">Música</string>
    <string name="idioma">Idioma</string>
    <string name="espa_ol">Español</string>
    <string name="english">English</string>
    <string name="nuestra_politica_de_privacidad">Nuestra politica de privacidad</string>
    <string name="user">user</string>
    <string name="nombre">Nombre</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="volver">volver</string>
    <string name="cambiar_nombre">Cambiar nombre</string>
    <string name="nameimagen">nameImagen</string>
    <string name="profileimagen">profileImagen</string>
    <string name="deleteuser">deleteUser</string>
    <string name="cambiar_avatar">Cambiar avatar</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="logoutimagen">logOutImagen</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="textoPregunta">¿Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore?</string>
    <string name="respuesta_1">Respuesta 1</string>
    <string name="respuesta_2">Respuesta 2</string>
    <string name="respuesta_3">Respuesta 3</string>
    <string name="respuesta_4">Respuesta 4</string>
    <string name="iconopregunta">iconoPregunta</string>
    <string name="imagenpregunta">imagenPregunta</string>
    <string name="back">back</string>
    <string name="_6">6.</string>
    <string name="classic">Classic</string>
    <string name="_4">4.</string>
    <string name="_5">5.</string>
    <string name="_8">8.</string>
    <string name="speed">Speed</string>
    <string name="just_1">Just 1</string>
    <string name="_7">7.</string>
    <string name="top3">top3</string>
    <string name="top1">top1</string>
    <string name="top2">top2</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="_70">70</string>
    <string name="_0">0</string>
    <string name="splash">splash</string>
    <string name="stats">stats</string>
    <string name="logros">logros</string>
    <string name="stats2">Stats</string>
    <string name="logros2">Logros</string>
    <string name="icon">icon</string>
    <string name="mitologia">mitologia</string>
    <string name="statsitem">statsItem</string>
    <string name="preguntas_falladas">Preguntas falladas:</string>
    <string name="_500">500</string>
    <string name="reintentar">reintentar</string>
</resources>