<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/dialog_options.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="260dp"
    android:background="#16959595"
    android:backgroundTintMode="add"
    android:orientation="vertical"
    tools:ignore="TextSizeCheck">

    <TextView
        android:id="@+id/barSoundTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/sonido"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <SeekBar
        android:id="@+id/seekBarSound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="-24dp"
        android:layout_marginEnd="16dp"
        android:max="100"
        android:progress="50"

        />


    <TextView
        android:id="@+id/barMusicTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/musica"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <SeekBar
        android:id="@+id/seekBarMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="-24dp"
        android:layout_marginEnd="16dp"
        android:max="100"
        android:progress="50"

        />

    <TextView
        android:id="@+id/languageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/idioma"
        android:textColor="@color/black"
        android:textSize="22sp" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="-35dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonSpanish"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black2"
            android:buttonTintMode="multiply"
            android:checked="true"
            android:text="@string/espa_ol"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButtonEnglish"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:buttonTintMode="multiply"
            android:text="@string/english"
            tools:ignore="TouchTargetSizeCheck,VisualLintBounds" />
    </RadioGroup>

    <TextView
        android:id="@+id/ourPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:autoLink="web"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/nuestra_politica_de_privacidad"
        android:textColor="#1650FF"
        android:textStyle="italic"
        tools:ignore="TouchTargetSizeCheck" />


</LinearLayout>
