<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <Button
        android:id="@+id/categoryButtonMainView"
        style="@style/buttonOutlined"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#2CFFFFFF"
        android:contentDescription="@string/just_1"
        app:icon="@drawable/opciones"
        app:iconGravity="textStart"
        app:iconPadding="2dp"
        app:iconSize="15dp"
        app:iconTint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/classicButtonMainView"
        app:layout_constraintTop_toBottomOf="@+id/playButtonMainView" />

    <Button
        android:id="@+id/speedButtonMainView"
        style="@style/buttonOutlined"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/grey2"
        android:contentDescription="@string/speed"
        app:icon="@drawable/crono"
        app:iconGravity="textStart"
        app:iconPadding="4dp"
        app:iconSize="20dp"
        app:iconTint="@color/grey"
        app:layout_constraintEnd_toStartOf="@+id/classicButtonMainView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButtonMainView"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/classicButtonMainView"
        style="@style/buttonOutlined"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/grey2"
        android:contentDescription="@string/classic"
        android:gravity="bottom|center"
        android:paddingTop="8dp"
        app:icon="@drawable/logoroll"
        app:iconGravity="textStart"
        app:iconPadding="2dp"
        app:iconSize="50dp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/categoryButtonMainView"
        app:layout_constraintStart_toEndOf="@+id/speedButtonMainView"
        app:layout_constraintTop_toBottomOf="@+id/playButtonMainView" />

    <ImageView
        android:id="@+id/configImageMainView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/opciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/configicondiceview"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/logoImageMainView"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoroll"
        android:contentDescription="@string/logo" />

    <Button
        android:id="@+id/playButtonMainView"
        style="@style/buttonOutlined"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:drawableEnd="@drawable/ic_rightarrow"
        android:drawableTint="@color/black"
        android:fontFamily="@font/baloo"
        android:text="@string/p_l_a_y"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageMainView" />

    <Button
        android:id="@+id/recordsButtonMainView"
        style="@style/buttonOutlined"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#37FFFFFF"
        android:drawableEnd="@drawable/ic_record"
        android:drawableTint="@color/black"
        android:text="@string/r_a_n_k_i_n_g"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/statisticsButtonMainView" />

    <Button
        android:id="@+id/statisticsButtonMainView"
        style="@style/buttonOutlined"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#37FFFFFF"
        android:drawableEnd="@drawable/ic_statistics"
        android:drawableTint="#000000"
        android:text="@string/s_t_a_t_s"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recordsButtonMainView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/modoTextViewMainView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/classic_mode"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/classicButtonMainView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playButtonMainView" />

    <Spinner
        android:id="@+id/categorySpinnerMainView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classicButtonMainView" />

    <ImageButton
        android:id="@+id/profileButton"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/perfil"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />


</androidx.constraintlayout.widget.ConstraintLayout>