<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/diceLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/logoImageDiceView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logodiceview"
        android:contentDescription="@string/logo" />

    <ImageView
        android:id="@+id/configIconDiceView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/configicondiceview"
        android:contentDescription="@string/opciones" />

    <TextView
        android:id="@+id/textDiceView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/acme"
        android:gravity="center|center_horizontal|center_vertical"
        android:lines="2"
        android:text="@string/desliza_para_lanzar"
        android:textColor="@color/black"
        android:textSize="44sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/diceImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/animcultviajes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/dado" />
</androidx.constraintlayout.widget.ConstraintLayout>