<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2"
    android:backgroundTint="#27A39D9D"
    android:backgroundTintMode="add"
    android:elevation="4dp">

    <TextView
        android:id="@+id/colorTypeTextViewQuestionView"
        android:layout_width="0dp"
        android:layout_height="470dp"
        android:background="@drawable/roundedcorners"
        app:layout_constraintBottom_toTopOf="@+id/answer1ButtonQuestionView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/blackBarQuestionView"
        android:layout_width="0dp"
        android:layout_height="12dp"
        android:background="@color/black2"
        app:layout_constraintBottom_toTopOf="@+id/colorTypeTextViewQuestionView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <ImageView
        android:id="@+id/typeQuestionIconQuestionView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blackBarQuestionView"
        app:srcCompat="@drawable/mitologyicon"
        android:contentDescription="@string/iconopregunta" />

    <ImageView
        android:id="@+id/questionImageQuestionView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="165dp"
        app:layout_constraintBottom_toBottomOf="@+id/colorTypeTextViewQuestionView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeProgressBar"
        android:contentDescription="@string/imagenpregunta" />

    <TextView
        android:id="@+id/questionTextViewQuestionView"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/textoPregunta"
        android:textAlignment="center"
        android:textColor="@color/black2"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/colorTypeTextViewQuestionView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionImageQuestionView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/answer1ButtonQuestionView"
        style="@style/buttonQuestion"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/baloo_bhai_2"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/respuesta_1"
        app:layout_constraintBottom_toTopOf="@+id/answer2ButtonQuestionView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorTypeTextViewQuestionView"
        tools:ignore="TextSizeCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/answer2ButtonQuestionView"
        style="@style/buttonQuestion"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/respuesta_2"
        app:layout_constraintBottom_toTopOf="@+id/answer3ButtonQuestionView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer1ButtonQuestionView"
        tools:ignore="TextSizeCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/answer3ButtonQuestionView"
        style="@style/buttonQuestion"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/respuesta_3"
        app:layout_constraintBottom_toTopOf="@+id/answer4ButtonQuestionView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer2ButtonQuestionView"
        tools:ignore="TextSizeCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/answer4ButtonQuestionView"
        style="@style/buttonQuestion"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="27dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/respuesta_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer3ButtonQuestionView"
        tools:ignore="TextSizeCheck,TouchTargetSizeCheck,VisualLintButtonSize" />

    <ProgressBar
        android:id="@+id/timeProgressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginTop="8dp"
        android:indeterminate="false"
        android:max="4000"
        android:progress="5"
        android:progressBackgroundTintMode="src_over"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeQuestionIconQuestionView" />

</androidx.constraintlayout.widget.ConstraintLayout>